# o42_server

./: .env.example  .gitignore  README.md  analytics.html  dashboard.html  pyproject.toml  pytest.ini  requirements.txt
app/: main.py
app/api/: deps.py
app/api/v1/: admin.py  agents.py  analytics.py  auth.py  customers.py  messaging.py  orders.py  products.py  reviews.py  users.py  wallets.py
app/api/v1/endpoints/: agents.py  auth.py  customers.py  orders.py  utils.py
app/api/v1/schemas/: agent.py  customer.py  order.py
app/core/: config.py  database.py  security.py
app/crud/: __init__.py  crud_admin.py  crud_agent.py  crud_analytics.py  crud_customer.py  crud_message.py  crud_notification.py  crud_order.py  crud_product.py  crud_review.py  crud_wallet.py
app/db/: mongodb.py  redis_client.py
app/models/: admin.py  agent.py  analytics.py  customer.py  message.py  notification.py  order.py  product.py  review.py  user.py  wallet.py
app/services/: connection_manager.py  email.py  face_verification.py  geo.py  image_generation.py  matching_service.py  media_analysis_service.py  notification_service.py  order_matching.py  payment_service.py  sms.py
app/utils/: helpers.py
tests/: conftest.py  test_main.py
tests/api/v1/: test_auth.py  test_customers.py  test_messaging.py  test_orders.py  test_wallets.py
tests/services/: test_face_verification.py  test_geo_service.py  test_image_generation.py  test_notification_service.py
